--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.4.3",
-        "pestphp/pest": "^1.3"
+        "pestphp/pest": "^1.3",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "psr-4": {
