--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
+        "ext-dom": "*",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.3",
         "illuminate/http": "^8",
