--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,10 @@
 {
-    "name": "laravel-zero/laravel-zero",
-    "description": "The Laravel Zero Framework.",
-    "keywords": ["framework", "laravel", "laravel zero", "console", "cli"],
-    "homepage": "https://laravel-zero.com",
     "type": "project",
     "license": "MIT",
-    "support": {
-        "issues": "https://github.com/laravel-zero/laravel-zero/issues",
-        "source": "https://github.com/laravel-zero/laravel-zero"
-    },
     "authors": [
         {
-            "name": "Nuno Maduro",
-            "email": "enunomaduro@gmail.com"
+            "name": "Miles Chou",
+            "email": "jangconan@gmail.com"
         }
     ],
     "require": {
@@ -47,5 +39,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "bin": ["pstock"]
+    "bin": ["pastock"]
 }
