--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.3",
         "illuminate/http": "^8",
         "laravel-zero/framework": "^8.8",
+        "mileschou/imgecho": "^0.1.0",
         "symfony/css-selector": "^5.3",
         "symfony/dom-crawler": "^5.3"
     },
