--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "illuminate/http": "^8",
         "laravel-zero/framework": "^8.8",
         "mileschou/imgecho": "^0.1.0",
+        "pastock/pachart": "dev-master",
         "symfony/css-selector": "^5.3",
         "symfony/dom-crawler": "^5.3"
     },
