--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         php: [ 8.0 ]
 
-    timeout-minutes: 120
+    timeout-minutes: 240
 
     name: Publisher
 
@@ -39,7 +39,7 @@ jobs:
           command: composer install --no-dev
 
       - name: Build stock price
-        run: php pastock build:stock:price -vvv
+        run: php pastock build:stock:price -vvv --random --full-limit=5
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
